# brain

./: .gitignore  README.md
brain-mvp/: .dockerignore  .env.example  .gitignore  API_ACCESS_GUIDE.md  Dockerfile  INSTALLATION.md  KNOWN_ISSUES.md  PROJECT_EXPLANATION.md  README.md  STRICT_APPROVAL_COMMANDS.md  USAGE_GUIDE.md  chunk_and_store_method.py  docker-compose.gpu.yml  docker-compose.yml  init_tables.sql  pyproject.toml  requirements.txt  web_interface.html
brain-mvp/docker/mineru/: Dockerfile  Dockerfile.cpu
brain-mvp/docs/: CHUNKING_SPRINTS.md  DOCKER_DEPLOYMENT.md  DOCKER_INSTALLATION.md  configuration_management.md  lightrag_architecture_analysis.md  mvp_preprocessing_implementation.md  performance_monitoring_optimization.md  security_data_privacy.md  sprint1_integration_summary.md  sprint1_performance_optimization.md
brain-mvp/scripts/: init-db.sql
brain-mvp/src/: __init__.py  main.py
brain-mvp/src/accountmatrix/: __init__.py  auth.py  session.py
brain-mvp/src/api/: __init__.py  app.py  main.py  server.py
brain-mvp/src/config/: __init__.py  config_manager.py  database.py  schemas.py  settings.py  utils.py
brain-mvp/tests/: final_e2e_test.py  simple_docker_test.py  test_chunk_storage.py  test_chunking_strategies.py  test_context_enrichment.py  test_direct_pdf.py  test_docker_e2e.py  test_document_upload.py  test_e2e_semantic.py  test_e2e_validation.py  test_hybrid_chunking.py  test_real_documents.py  test_summarization.py  test_summarization_integration.py
query-reactor/: .env.example  .gitignore  DEVELOPMENT.md  Dockerfile  MD_ORGANIZATION_SUMMARY.md  PROJECT.md  README.md  SYSTEM_SETUP_INSTRUCTIONS.md  TEST_ORGANIZATION_SUMMARY.md  UNIT_TEST_COMPLETION_SUMMARY.md  config.md  docker-compose.yml  fallback_logging_demo.py  fix_fallback_logging.py  langgraph.json  main.py  prompts.md  pyproject.toml  utility_files_analysis.py
query-reactor/docs/: CONFIG_LOADING_GUIDELINES.md  ENHANCED_FALLBACK_LOGGING.md  GITHUB_WORKFLOW_GUIDE.md  M2D5_TO_M5_CONNECTION_FLOW.md  M5_M4_MODULES.md  M7_EVIDENCE_AGGREGATOR_REVIEW.md  M7_M8_WORKFLOW_VERIFICATION.md  M7_TO_M8_DATA_FLOW.md  P2_M5_M4_DATA_FLOW.md  QUERYREACTOR_FLOW_EXPLANATION.md  SUPPORTED_MODELS.md
query-reactor/monitoring/: prometheus.yml
query-reactor/reports/: SUMMARY.md
query-reactor/src/: __init__.py
query-reactor/tests/: README.md  conftest.py  pytest.ini
(+196 files in other folders)
